# turtle-backtest

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_BACKTESTING.md  README.md  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scripts.md  service.md  setup.cfg  strategy.md  test.ipynb
.claude/: instructions.md  settings.json
.claude/commands/: code-review.md  git-commit-push.md  my-code-review.md  new-task.md
.github/workflows/: build.yml  codeql.yml
config/: settings.toml  stdout.json
db/: init.sh  init.sql  live_trading_schema.sql
db/migrations/: env.py  script.py.mako
deploy/: eodhd-download.service  eodhd-download.timer  snapshot_company.service  snapshot_company.timer  turtle-backup.service  turtle-backup.timer
docs/: google_sheets_integration.md  implementation.md  live_trading.md  scripts.md  service.md  strategy.md  troubleshooting.md
docs/research/: prompts.md  qullamaggie-backtest-v2.md  qullamaggie-backtest-v4.md  qullamaggie-backtest.md  result-limit-order-test.md  result-qullamaggie-adr-buckets.md  result-qullamaggie-adr-cohorts.md  result-qullamaggie-backtest-v2.md  result-qullamaggie-backtest-v4.md  result-qullamaggie-portfolio.md  result-qullamaggie-price-cohorts.md  result-qullamaggie-ranking-2001.md  result-qullamaggie-ranking-final.md  result-qullamaggie-ranking.md  result-qullamaggie-roc-cohorts.md  result-qullamaggie-volsurge-buckets.md  result-qullamaggie-volsurge-cohorts.md
examples/: active_symbol_goup_setup.sql  backtesting.ipynb  example_tables_setup.sql  google_sheets_test.py  live_trading_example.py  pandas.ipynb  period_return_strategy_usage.py  portfolio_backtest_api_demo.py  portfolio_backtest_example.py  portfolio_backtesting.ipynb  symbol_group.ipynb
scripts/: backtest.py  daily_eod_update.py  db_migrate.py  download_eodhd_data.py  portfolio_runner.py  qullamaggie-backtest-v4.py  qullamaggie-limit-order-test.py  qullamaggie-monthly-analysis.py  qullamaggie-portfolio-sim.py  qullamaggie-volsurge-cohorts.py  qullamaggie_backtest.py  qullamaggie_backtest_v2.py  setup_live_trading.py  signal_runner.py  snapshot_company.py  strategy_performance.py  strategy_runner.py  strategy_tester.py
tasks/: issue-001.md  issue-002.md  issue-003.md  issue-004.md  issue-005.md  issue-006.md  issue-007.md  issue-008.md  issue-009.md  issue-010.md  issue-011.md  issue-012.md  issue-013.md  issue-014.md  issue-015.md  issue-016.md  issue-017.md  issue-018.md  issue-019.md  issue-020.md  issue-021.md  issue-022.md  issue-023.md  issue-024.md  issue-025.md  issue-026.md  issue-027.md  issue-028.md  issue-029.md  issue-030.md
tests/: conftest.py  test_alpaca_bars_history.py  test_alpaca_company.py  test_alpaca_symbol.py  test_atr_exit_strategy.py  test_bars_history.py  test_breakout_quality_ranking.py  test_company.py  test_darvas_box.py  test_factory.py  test_live_trading.py  test_macd_exit_strategy.py  test_models.py  test_momentum_ranking.py  test_momentum_strategy_parity.py  test_ohlcv_analytics_repository.py  test_pandas_ta_ema.py  test_period_return.py  test_period_return_integration.py  test_portfolio.py  test_repositories_eodhd.py  test_settings.py  test_signal_processor.py  test_strategy_performance_tester_simple.py  test_symbol.py  test_talib_ema.py  test_volume_momentum_ranking.py  test_volume_weighted_technical_ranking.py
tests/backtest/: test_signal_processor.py
tests/config/: test_api_token_filter.py  test_settings.py
tests/exit/: test_atr_exit_strategy.py  test_buy_and_hold_exit_strategy.py  test_ema_exit_strategy.py  test_macd_exit_strategy.py  test_profit_loss_exit_strategy.py  test_trailing_percentage_loss_exit_strategy.py
tests/portfolio/: test_portfolio.py
tests/repository/: test_ohlcv_analytics_repository.py  test_repositories_eodhd.py
turtle/: __init__.py  factories.py  factory.py  model.py
turtle/backtest/: __init__.py  benchmark_utils.py  exit_strategy.py  models.py  portfolio_processor.py  processor.py  strategy_performance.py
turtle/client/: __init__.py  eodhd.py
turtle/clients/: eodhd.py
turtle/common/: __init__.py  cli.py  enums.py  pandas_utils.py
turtle/config/: logging.py  model.py  settings.py
turtle/data/: __init__.py  alpaca_bars_history.py  alpaca_company.py  alpaca_symbol.py  alpaca_tables.py  bars_history.py  company.py  models.py  symbol.py  symbol_group.py  tables.py
turtle/exit/: __init__.py  atr.py  base.py  buy_and_hold.py  ema.py  macd.py  profit_loss.py  trailing_percentage_loss.py
turtle/google/: __init__.py  auth.py  client.py  models.py  signal_exporter.py
turtle/logger/: json-logger.py
turtle/performance/: models.py  period_return.py  strategy_performance.py
turtle/portfolio/: __init__.py  analytics.py  backtester.py  manager.py  models.py  performance.py  selector.py
turtle/ranking/: __init__.py  base.py  breakout_quality.py  momentum.py  ranking_strategy.py  volume_momentum.py  volume_weighted_technical.py
turtle/repositories/: __init__.py  analytics.py  eodhd.py  models.py  symbol_group.py
turtle/repository/: __init__.py  analytics.py  models.py  symbol_group.py  tables.py
turtle/schema/: __init__.py
turtle/schemas/: __init__.py  eodhd.py
turtle/service/: alpaca_service.py  backtest_service.py  data_update.py  data_update_service.py  eodhd_service.py  live_trading_service.py  market.py  portfolio_service.py  signal_service.py  strategy_performance_service.py  strategy_runner.py  strategy_runner_service.py  (+1 more)
(+101 files in other folders)
