[project]
name = "turtle"
version = "0.3.0"
description = "Backtest different US stocks trading strategies"
authors = [{ name = "Jaak Niit", email = "jaak.niit@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "alpaca-py>=0.42.0",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.64",
    "psycopg[binary,pool]>=3.2.1",
    "pandas>=2.2.2",
    "ta-lib>=0.6.4",               # Requires system library: https://github.com/TA-Lib/ta-lib-python#troubleshooting
    "numpy>=2.0.0",                # Upgraded to NumPy 2.0 (TA-Lib 0.6.4+ supports it)
    "streamlit>=1.37.1",
    "setuptools>=74.1.2",
    "backtesting>=0.3.3",
    "bokeh==2.4.3",
    "plotly>=5.24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "pytest-mock>=3.14.0", "jupyter>=1.1.1"]
lint = ["ruff>=0.1.0", "mypy>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turtle"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:websockets.legacy.*"]

[tool.ruff]
target-version = "py313"
line-length = 140
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    #    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "types-requests>=2.32.4.20250809",
]
