[project]
name = "turtle"
version = "0.3.0"
description = "Backtest different US stocks trading strategies"
authors = [{ name = "Jaak Niit", email = "jaak.niit@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "alpaca-py>=0.43.2",
    "python-dotenv>=1.2.2",
    "yfinance>=1.2.0",
    "psycopg[binary,pool]>=3.3.3",
    "sqlalchemy>=2.0",
    "alembic>=1.18.4",
    "pandas>=2.3.3,<3",              # streamlit 1.55.0 requires pandas<3
    "ta-lib>=0.6.8",               # Requires system library: https://github.com/TA-Lib/ta-lib-python#troubleshooting
    "numpy>=2.4.3",                # Upgraded to NumPy 2.0 (TA-Lib 0.6.4+ supports it)
    "streamlit>=1.55.0",
    "setuptools>=82.0.1",
    "backtesting>=0.6.5",
    "bokeh>=3.9.0",
    "plotly>=6.6.0",
    "quantstats>=0.0.81",          # Portfolio analytics for quantitative analysis
]

[project.optional-dependencies]
dev = ["jupyter>=1.1.1"]
lint = ["ruff>=0.1.0", "mypy>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turtle"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:websockets.legacy.*"]

[tool.ruff]
target-version = "py313"
line-length = 140
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "types-requests>=2.32.4.20260107",
]
